--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pdfminer.six>=20231228",
     "python-multipart>=0.0.9",
-    "openai>=1.40.0"
+    "openai>=1.40.0",
+    "psycopg[binary]>=3.1.0"
 ]
 
 [project.optional-dependencies]
