--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ python-dotenv>=1.0.0
 pdfminer.six>=20231228
 python-multipart>=0.0.9
 openai>=1.40.0
+psycopg[binary]>=3.1.0
 pytest>=8.0.0
 httpx>=0.27.0
